<resources>
    <string name="app_name">BetssonGroupTechnicalAssesment</string>
    <string name="grid_item_price_label"><b>Price:</b> %1$s</string>
    <string name="grid_item_rating_label"><b>Rating:</b> %1$s</string>
    <string name="grid_item_distance_label">%1$s km from you</string>
    <string name="dialog_filter_title">Customize your experience</string>
    <string name="dialog_filter_price_scale_label">Pick a price scale:</string>
    <string name="dialog_filter_open_now_label">Open now:</string>
    <string name="dialog_filter_dropdown_hint">Any</string>
    <string name="dialog_filter_button_apply_label">Apply</string>
    <string name="dialog_filter_button_cancel_label">Cancel</string>
    <string name="place_detail_gallery_label">Gallery</string>
    <string name="place_details_reviews_label">Reviews</string>

    <string-array name="pricingScale">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
    </string-array>
</resources>