<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFilterDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/dialog_filter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvFilterDialogDropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvFilterDialogPriceScaleLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvFilterDialogPriceScaleLabel">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            tools:ignore="LabelFor"
            tools:text="All" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFilterDialogPriceScaleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/dialog_filter_price_scale_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFilterDialogTitle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/tvFilterDialogOpenNowToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_filter_open_now_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFilterDialogDropdown" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btbFilterDialogApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_filter_button_apply_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btbFilterDialogCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFilterDialogOpenNowToggle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btbFilterDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_filter_button_cancel_label"
        android:textColor="@color/design_default_color_primary"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btbFilterDialogApply"
        app:layout_constraintTop_toBottomOf="@id/tvFilterDialogOpenNowToggle"
        app:strokeColor="@color/design_default_color_primary"
        app:strokeWidth="@dimen/dp_1" />

</androidx.constraintlayout.widget.ConstraintLayout>